fix: word-spacing

--- a/stylesheets/why-us-section.css
+++ b/stylesheets/why-us-section.css
@@ -95,7 +95,6 @@
 .why-us .container .item .text {
   font-weight: 500;
   width: 85%;
-  word-spacing: 5px;
   line-height: 25px;
 }
 
